# power-context

./: .dockerignore  .env  .env.example  .gga  .gitignore  .qdrantignore  AUTHORS  CHANGELOG.md  CODEOWNERS  Dockerfile  Dockerfile.indexer  Dockerfile.llamacpp  Dockerfile.mcp  Dockerfile.mcp-indexer  Dockerfile.upload-service  LICENSE  Makefile  NOTICE  README.md  TEST_RESULTS.md  THIRD_PARTY_LICENSES  build-images.sh  cosqa_cosqa_cosqa-bge-tuned-1_cosqa_cosqa_results_20260107_202351_meta.json  cosqa_cosqa_cosqa-bge-tuned-1_cosqa_cosqa_results_20260107_204221_meta.json  ctx-hook-simple.sh  ctx_config.example.json  delta_upload_architecture.md  delta_upload_design.md  docker-compose-bindmount-checkout.yml  docker-compose.arm64.yml  docker-compose.dev-remote.yml  docker-compose.openlit.yml  docker-compose.yml  install-mcp-servers.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  svelte.config.js  (+1 more)
.claude-plugin/: manifest.json  marketplace.json
.codex/: config.toml
bench/: README.md  clone_snapshot.py  copy-coll.py  doc.md  eval.py  eval_quality.py  queries.txt  run_matrix.py
cli/: __init__.py  __main__.py  _version.py  core.py  main.py
config/: clickhouse-config.xml  docker_related_config.xml  otel-collector-config.yaml
ctx-mcp-bridge/: README.md  package-lock.json  package.json  publish.sh
ctxce-cli/: package-lock.json  package.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.example.md  CONFIGURATION.md  CONFIG_DRIFT.md  CTX_CLI.md  DEVELOPMENT.md  GETTING_STARTED.md  IDE_CLIENTS.md  MCP_API.md  MEMORY_GUIDE.md  MULTI_REPO_COLLECTIONS.md  OBSERVABILITY.md  TROUBLESHOOTING.md  dev-remote-setup.md  remote_upload.md  upload_service.md  usage_guide.md  vscode-extension.md
mcp-proxy/: mcp-indexer-proxy.py
scripts/: __init__.py  add_vector_name.py  admin_ui.py  ast_analyzer.py  async_subprocess_manager.py  auth_backend.py  cache_manager.py  ctx.py  (+78 more)
(+301 files in other folders)
