[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power-context"
version = "0.1.0"
description = "MCP/CLI for semantic code search and indexing"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "jinyaoo", email = "jinyaoo86@outlook.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "qdrant-client>=1.15.0,<1.16.0",
    "fastembed",
    "watchdog",
    "onnxruntime",
    "tokenizers",
    "orjson",
    "tree_sitter>=0.25.0",
    "tree_sitter_python>=0.23.0",
    "tree_sitter_javascript>=0.23.0",
    "tree_sitter_typescript>=0.23.0",
    "tree_sitter_go>=0.23.0",
    "tree_sitter_rust>=0.23.0",
    "tree_sitter_java>=0.23.0",
    "tree_sitter_c>=0.23.0",
    "tree_sitter_cpp>=0.23.0",
    "tree_sitter_ruby>=0.23.0",
    "tree_sitter_c_sharp>=0.23.0",
    "tree_sitter_bash>=0.23.0",
    "tree_sitter_json>=0.24.0",
    "tree_sitter_yaml>=0.7.0",
    "tree_sitter_html>=0.23.0",
    "tree_sitter_css>=0.23.0",
    "tree_sitter_markdown>=0.5.0",
    "mcp==1.17.0",
    "fastmcp==2.12.4",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
    "openai>=2.11.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "anyio",
    "testcontainers",
    "python-toon>=0.1.3",
]

[project.scripts]
power-context = "cli.main:main"

[tool.setuptools.packages.find]
include = ["cli*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
